# semlabs-jmacey-1

./: .gitignore  README.md  test.py
FirstClass/: NumberStats.py  Person.py  Person2.py  colour.py  main.py  pyproject.toml  scratch.py
FuncDemo/: main.py  new_demo.py  pyproject.toml  scratch.py
Image/: pyproject.toml
Image/src/image/: Image.py  __init__.py
Image/tests/: test_Image.py
Matplot/: MatPlotLib.py  pyproject.toml
MyFirstProject/: main.py  pyproject.toml
PandasLecture/: .envrc  MetArtProcessing.py  PandasIntro.py  pyproject.toml  zsh_functions.sh
