[project]
name = "image"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "jmacey", email = "jmacey@bournemouth.ac.uk" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
image = "image:main"

[build-system]
requires = ["uv_build>=0.9.0,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
